# probedesign

./: Pipfile  README.md  probedesign.yml  setup.cfg
src/: consensus.py  oligogenerator.py  primersearch.py  probesearch.py  simulate_tm.py
src/probedesign/: consensus.py  multiprocess_blast.py  oligogenerator.py  primersearch.py  probesearch.py  tmcalc.py
src/probedesign_michaelke17.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Pratylenchus-penetrans_aligned.fasta  multiprocess_blast.py  prototype_categorical_dataframe.py  test_align.fasta  test_get_sequence_regions.py
