[metadata]
name = probedesign-michaelke17
version = 0.0.1
author = Michael Ke
author_email = michael.ke200@gmail.com
description = Program for designing TaqMan probes that are species/strain specific. 
long_description = file: README.md
long_description_content_type = text/markdown
url = N/A
project_urls =
    Bug Tracker = N/A
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src